--- a/OrangeTutorial/www.OrangeTutorial.com/css/style.css
+++ b/OrangeTutorial/www.OrangeTutorial.com/css/style.css
@@ -7,28 +7,28 @@ html, body{
     height: 100%;
     font-weight: normal;
 }
-.navigation{
+.navigation-bar{
     text-align: center;
     padding: 10px;
+    background-image: url(../images/navigationbars.jpg);
 }
-.navigation a{
-    text-decoration: none;
+.navigation-bar a{
+    text-decoration: none;  /* remove underline text */
     color: #fff;
     font-size: 25px;
     font-family: Karla, sans-serif;
     margin-right: 80px;
     border: 2px solid transparent;
-    padding: 10px;
+    padding: 10px;      /* its like the background image of the text */
     transition: 0.3s;
 }
-.navigation a:hover{
+.navigation-bar a:hover{
     background: grey;
-    border: 2px solid #fff;
+    border: 2px solid #fff;  /* UI */
 }
 .subjects-section{
     width: 100%;
     height: 770px;
-    background: #4b6961;
     text-align: center;
 }
 .subjects-section h2{
@@ -42,6 +42,28 @@ html, body{
     margin: 2%;
     float: left;
 }
+.about-section{
+    background-color: #f2f2f2;
+    height: 230px;
+}
+.about-section h2{
+    text-align: center;
+    font-size: 30px;
+    font-family: Karla, sans-serif;
+    color: #ff8000;
+}
+.about-section p{
+    font-size: 15px;
+    font-family: Karla, sans-serif;
+    width: 1000px;
+    text-align: center;
+    margin: 0 auto;
+    border: 1px solid gray;
+    padding: 15px;
+    line-height: 30px;
+    background-color: #383637;
+    color: lightgray;
+}
 .image img{
     width: 300px;
     height: 300px;
@@ -52,22 +74,23 @@ html, body{
     transform: scale(1.2);
 }
 .contact-section{
-    height: 48vh;
+    height: 280px;
     background: gray;
     text-align: center;
 }
-.contact-section span{
+.contact-section h2{
+    text-align: center;
     font-size: 30px;
-    font-weight: bold;
     font-family: Karla, sans-serif;
-    color: lightgray;
+    color: #ff8000;
+    height: 70px;
 }
 input{
-    display: block;
+    display: flex;
     margin: 10px auto 0;
-    margin-buttom: 10px;
-    border-radius: 10px;
-    border: 0;
+    margin-buttom: 100px;
+    border-radius: 100px;
+    border: 2;
     background: #50555b;
     color: #fff;
 }
@@ -96,4 +119,11 @@ textarea{
     border-bottom: 1px solid grey;
     padding: 10px;
     line-height: 20px;
+}
+.footer img{
+    transition: all ease 0.5s;
+    transform: scale(1);
+}
+.footer img:hover{
+    transform: scale(1.2);
 }
