--- a/OrangeTutorial/www.OrangeTutorial.com/styles/css.css
+++ b/OrangeTutorial/www.OrangeTutorial.com/styles/css.css
@@ -7,15 +7,8 @@ html, body{
     height: 100%;
     font-size: 13px;
     font-weight: normal;
-}
-.background{
-    width: 100%;
-    height: 100%;
-    background-image: url(../images/1.jpg);
-    background-repeat: no-repeat;
     background-size: cover;
-    overflow-y: auto;
-    position: relative;
+    background-repeat: no-repeat;
 }
 .nav{
     width: 350px;
@@ -26,23 +19,22 @@ html, body{
 }
 .nav a{
     text-decoration: none;
-    font-size: 28px;
+    font-size: 15px;
     font-family: Verdana, serif;
-    font-weight: bold;
     display: inline-block;
-    height: 90px;
+    height: 50px;
     margin: 5px 0;
     float: left;
-    background-color: black;
-    color: white;
-    line-height: 60px;
+    background-color: #ffd1b3;
+    color: black;
+    line-height: 50px;
     text-align: center;
-    transition: 300ms;
+    transition: 200ms;
 }
 a.active, .nav a:hover{
-    background-color: lightgray;
-    color: black;
-    width: 100%;
+    background-color: #ff8533;
+    color: white;
+    width: 70%;
 }
     .a{
         width: 75%;
@@ -70,4 +62,105 @@ a.active, .nav a:hover{
     }
     .i{
         width: 75%;
+    }
+    .content{
+        position: absolute;
+        width: 930px;
+        min-height: 500px;
+        height: auto;
+        right: 0;
+        top: 25%;
+    }
+    .home{
+      position: absolute;
+      background-color: black;
+      right: 10px;
+      top: -130px;
+      color: white;
+      font-family: Verdana, serif;
+      padding: 0 80px;
+      font-size: 16px;
+      line-height: 24px;
+      margin-bottom: 15px;
+      display: none;
+    }
+    .introduction{
+        position: absolute;
+        background-color: black;
+        opacity: 0.5;
+        right: 10px;
+        top: -130px;
+        color: white;
+        font-family: Verdana, serif;
+        padding: 0 60px;
+        font-size: 14px;
+        line-height: 24px;
+        margin-bottom: 15px;
+        display: none;
+    }
+    .syntax{
+      position: absolute;
+      background-color: black;
+      opacity: 0.5;
+      right: 10px;
+      top: -130px;
+      color: white;
+      font-family: Verdana, serif;
+      padding: 0 60px;
+      font-size: 14px;
+      line-height: 24px;
+      margin-bottom: 15px;
+      display: none;
+    }
+    .colors{
+      position: absolute;
+      background-color: black;
+      opacity: 0.5;
+      right: 10px;
+      top: -130px;
+      color: white;
+      font-family: Verdana, serif;
+      padding: 0 60px;
+      font-size: 14px;
+      line-height: 24px;
+      margin-bottom: 15px;
+      display: none;
+    }
+    .backgrounds{
+      position: absolute;
+      background-color: black;
+      opacity: 0.5;
+      right: 10px;
+      top: -130px;
+      color: white;
+      font-family: Verdana, serif;
+      padding: 0 60px;
+      font-size: 14px;
+      line-height: 24px;
+      margin-bottom: 15px;
+      display: none;
+    }
+    .footer{
+        background-image: url("../images/navigationbars.jpg");
+        font-size: 20px;
+        height: 130px;
+        padding: 10px;
+        text-align: center;
+        color: #fff;
+        cursor: default;
+    }
+    .footer p{
+        font-size: 13px;
+        font-family: Karla, sans-serif;
+        border-bottom: 1px solid grey;
+        padding: 10px;
+        color: lightgray;
+        line-height: 20px;
+    }
+    .footer img{
+        transition: all ease 0.5s;
+        transform: scale(1);
+    }
+    .footer img:hover{
+        transform: scale(1.2);
     }
